UI: Tabs spacing fix

--- a/www/css/ui.css
+++ b/www/css/ui.css
@@ -1,5 +1,7 @@
 #tabs {
 	white-space:	nowrap;
+	padding-right:	1em;
+	width:			300px;
 }
 
 
